messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app-blue
  labels:
    app: messaging-app
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
    spec:
      containers:
        - name: messaging-app
          image: ogboemmandu/messaging_app:2.0
          ports:
            - containerPort: 8000
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app
    version: blue
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
