messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: django.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: django-service   # must match your service name
                port:
                  number: 8000
